index file was added

--- a/Mirthul/index.html
+++ b/Mirthul/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to GitHub!</h1>
+        <h1>Welcome to GitHub!!</h1>
         <p>
             We're thrilled to welcome you to our organization on GitHub. Whether you're a seasoned developer or just starting your coding journey, we're excited to have you as part of our community.
         </p>
